# ion

./: .clang-format  .dockerignore  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Makefile  README.md  app.Dockerfile  build-scratch-root.sh  build.Dockerfile  cert.pem  ion_server_status.html  key.pem  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
app/: CMakeLists.txt  args.cpp  args.h  main.cpp  proc_ctrl.cpp  proc_ctrl.h  server_stats.cpp  server_stats.h  signal_handler.cpp  signal_handler.h  status_page.cpp  status_page.h  telemetry.cpp  telemetry.h  test_routes.cpp  test_routes.h  trace_id_flag.cpp  trace_id_flag.h
benchmark/: results.md
docs/: LEARNINGS.md
ion-server/: CMakeLists.txt  args.cpp  args.h  header_block_decoder.cpp  header_block_decoder.h  http2_conn.cpp  http2_conn.h  http2_connection.cpp  http2_connection.h  http2_except.h  http2_frames.h  http2_server.cpp  http2_server.h  huffman_codes.h  huffman_tree.cpp  huffman_tree.h  main.cpp  openssl_wrappers.h  socket_fd.h  tcp_conn.cpp  tcp_conn.h  tls_conn.cpp  tls_conn.h  tls_conn_except.cpp  tls_conn_except.h
ion-server/headers/: bit_reader.h  bit_writer.h  header_block_decoder.cpp  header_block_decoder.h  header_static_table.h  huffman_codes.h  huffman_tree.cpp  huffman_tree.h
lib/: CMakeLists.txt  access_log.cpp  access_log.h  file_reader.cpp  file_reader.h  frame_error.h  http2_conn.cpp  http2_conn.h  http2_frame_reader.cpp  http2_frame_reader.h  http2_frames.h  http2_server.cpp  http2_server.h  http_response.h  router.cpp  router.h  server_config.cpp  server_config.h  socket_fd.cpp  socket_fd.h  static_file_handler.cpp  static_file_handler.h  stop_reason.cpp  stop_reason.h  system_clock.cpp  system_clock.h  tcp_conn.cpp  tcp_conn.h  tcp_listener.cpp  tcp_listener.h  tcp_transport.cpp  tcp_transport.h  tls_conn.cpp  tls_conn.h  tls_transport.cpp  tls_transport.h  transport.h  version.h.in
lib/headers/: dynamic_table.cpp  dynamic_table.h  header_block_decoder.cpp  header_block_decoder.h  header_block_encoder.cpp  header_block_encoder.h
lib/hpack/: bit_writer.h  byte_reader.cpp  byte_reader.h  dynamic_table.cpp  dynamic_table.h  header_block_decoder.cpp  header_block_decoder.h  header_block_encoder.cpp  header_block_encoder.h  header_field.h  header_static_table.h  http_header.h  huffman_tree.cpp  huffman_tree.h  int_decoder.cpp  int_decoder.h  int_encoder.cpp  int_encoder.h  static_http_header.h
lib/pollers/: epoll_poller.cpp  epoll_poller.h  poll_poller.cpp  poll_poller.h  poller.cpp  poller.h
lib/transports/: tcp_transport.cpp  tcp_transport.h  tls_context.cpp  tls_context.h  tls_transport.cpp  tls_transport.h  transport.h
otel-example/: Makefile  README.md  docker-compose-grafana.yml  docker-compose.yml  otel-collector-tempo.yaml  tempo.yaml
otel-example/www/: index.html
test/: h2_helpers.py  test_cmd.py  test_curl.py  test_h2spec.sh  test_http2.py  test_httpx.py  test_hyperh2.py  test_tcp.py  utils.py
test/integration/: CMakeLists.txt  curl_client.h  server_test_fixture.h  test_helpers.cpp  test_helpers.h  test_server.cpp  test_server_runner.h  test_static.cpp  wait_for_port.cpp  wait_for_port.h
test/system/: conftest.py  h2_helpers.py  pyproject.toml  requirements.txt  server_runner.py  test_cmd.py  test_curl.py  test_h2spec.sh  test_httpx.py  test_hyperh2.py  test_security.py  test_telemetry.py  utils.py
test/system/helpers/: h2_helpers.py  server_runner.py  utils.py
test/system/static/: 403.html  404.html  index.html
test/unit/: CMakeLists.txt  test_bit_reader.cpp  test_file_reader.cpp  test_frame_parsing.cpp  test_header_block_decoder.cpp  test_hpack.cpp  test_hpack_decode.cpp  test_huffman_tree.cpp  test_router.cpp  test_router_middleware.cpp
test/unit/headers/: test_bit_reader.cpp  test_dynamic_table.cpp  test_hb_decoder.cpp  test_hb_encoder.cpp  test_hbd_decode.cpp  test_hbd_encode.cpp  test_header_block_decoder.cpp  test_huffman_tree.cpp
test/unit/hpack/: test_bit_reader.cpp  test_byte_reader.cpp  test_dynamic_table.cpp  test_hb_decoder.cpp  test_hb_encoder.cpp  test_huffman_tree.cpp  test_int_decoder.cpp  test_int_encoder.cpp
